2011-09-22  Michael Albinus  <michael.albinus@gmx.de>

	* files.el (copy-directory): Set directory attributes only in case
	they could be retrieved from the source directory.  (Bug#9565)

2011-09-22  Dima Kogan  <dkogan@secretsauce.net>  (tiny change)

	* progmodes/hideshow.el (hs-looking-at-block-start-p)
	(hs-find-block-beginning, hs-hide-level-recursive):
	Ignore strings as well as comments.  (Bug#9502)

2011-09-22  Andrew Schein  <andrew@andrewschein.com>  (tiny change)

	* progmodes/sql.el (sql-comint-postgres):
	Convert port number to a string.  (Bug#9566)

2011-09-22  Martin Rudalics  <rudalics@gmx.at>

	* window.el (quit-window): Undedicate window when switching to
	previous buffer.  Reported by Thierry Volpiatto
	<thierry.volpiatto@gmail.com>.
	(special-display-popup-frame): When popping up a new frame reset
	its previous buffers to nil.  Simplify code.

2011-09-21  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-handle-shell-command): Set process sentinel
	and process filter, as done also in `shell-command'.

2011-09-21  Martin Rudalics  <rudalics@gmx.at>

	* window.el (set-window-buffer-start-and-point): Call
	set-window-start with NOFORCE argument t.  Suggested by Thierry
	Volpiatto <thierry.volpiatto@gmail.com>.
	(quit-window): Reword doc-string.  Handle new format of
	quit-restore parameter.  Don't delete window if it has a
	previous buffer we can show instead of the present one.
	(display-buffer-record-window): Rewrite using a new format for
	the quit-restore window parameter
	(special-display-popup-frame, display-buffer-same-window)
	(display-buffer-reuse-window, display-buffer-pop-up-frame)
	(display-buffer-pop-up-window, display-buffer-use-some-window):
	Adapt symbol passed to display-buffer-record-window.
	* help.el (help-window-setup): Handle new format of quit-restore
	parameter.

2011-09-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* faces.el (face-list): Fix docstring (bug#9564).
