@@ -1,3 +1,8 @@
+2011-09-22  Richard Stallman  <rms@gnu.org>
+
+	* textmodes/paragraphs.el (forward-sentence): When setting PAR-BEG,
+	move back only to line beg, don't move back over blank lines.
+
 2011-09-22  Michael Albinus  <michael.albinus@gmx.de>
 
 	* files.el (copy-directory): Set directory attributes only in case
